# OfficeProspector

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
config/: exclusion_chains.txt  settings.yaml
docs/: google_apps_script.js  index.html
docs/site/: index.html
docs/site/css/: style.css
docs/site/js/: app.js
scripts/: publish-data.sh
src/: cli.py  config.py  pipeline.py
src/enrich/: apollo_enrichment.py  email_guesser.py  ptin_crossref.py  serper_search.py  website_scraper.py
src/export/: csv_exporter.py  json_exporter.py
src/filter/: deduplication.py  exclusion_filter.py  volume_filter.py
src/ingest/: contact_extract.py  downloader.py  master_extract.py  partner_extract.py  ptin_extract.py
src/models/: __init__.py  firm.py
